--- a/com.ibm.wala.ide/build.properties
+++ b/com.ibm.wala.ide/build.properties
@@ -1,10 +1,6 @@
 bin.includes = .,\
                META-INF/,\
-               plugin.properties,\
-               target/dependency/com.ibm.wala.core.jar,\
-               target/dependency/com.ibm.wala.util.jar,\
-               target/dependency/com.ibm.wala.shrike.jar,\
-               target/dependency/com.ibm.wala.cast.jar
+               plugin.properties
 jars.compile.order = .
 source.. = src/main/java/
 output.. = bin/main
